--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -123,7 +123,8 @@
    "source": [
     "print(len(genome1['genome']), len(genome1['annotation']))\n",
     "print(genome1['genome'][:60])\n",
-    "print(genome1['annotation'][:60])"
+    "print(genome1['annotation'][:60])\n",
+    "#can i see this in readme.md"
    ]
   },
   {
