not thouhing readme.md

--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -124,7 +124,7 @@
     "print(len(genome1['genome']), len(genome1['annotation']))\n",
     "print(genome1['genome'][:60])\n",
     "print(genome1['annotation'][:60])\n",
-    "#can i see this in readme.md"
+    "#just testing if i understand jupyter"
    ]
   },
   {
