--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -123,8 +123,7 @@
    "source": [
     "print(len(genome1['genome']), len(genome1['annotation']))\n",
     "print(genome1['genome'][:60])\n",
-    "print(genome1['annotation'][:60])\n",
-    "#just testing if i understand jupyter"
+    "print(genome1['annotation'][:60])"
    ]
   },
   {
