deleted some lines mb, think i fixed it

--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -130,6 +130,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The genomic sequence is a sequence over the letters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C', 'G', 'A', 'T'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(genome1['genome']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while the annotation is a sequence over the letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C', 'N', 'R'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(genome1['annotation']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "that should be interpreted as non-coding, reverse-coding, and coding.\n",
     "\n",
     "If we are to analyse such a genome using a hidden Markov model, we must be able to use both the observable letters (the genomic sequence) and the hidden states (the annotation) as indices into matrices or vectors.\n",
